--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <button onclick="print_('Hola')">Hola Mundo!</button>
+    <button onclick="print_('Prueba')">Prueba!</button>
 
     <script src="../src/index.js"></script>
     <script>
